played around w/ style and interactiveness and inserted one blog

--- a/index.html
+++ b/index.html
@@ -1,21 +1,144 @@
 <html>
-    <head>
-
-    </head>
-    <body>
-        
-        <h1>Derek's Train of Thought</h1>
-
-        <div>
-            <h3>About</h3>
-            <p>
-                
-            </p>
-        </div>
-
-        <div>
-            <h3>Tough conversation to have with parents</h3>
-        </div>
-
-    </body>
+<head>
+	
+	<link rel="stylesheet" href="style.css">
+	<script src="interactive.js"></script>
+	<title>derektor</title>
+	
+</head>
+<body>
+	
+	<h1>Derek's Train of Thought</h1>
+	
+	<div>
+		<h3 class="acc">About</h3>
+		<div>
+			<p>
+				Here, I let out the cascade of thoughts that is eating me from inside.
+			</p>
+			<p>
+				As of January 2021, I am 19 years old and I study Computer Science in Polish, in which language that I can barely share a sentence with anyone. So yeah, as of now, my life is looking pretty fucking ugly and I am sorry to welcome you and tell you why it all sucks.
+			</p>
+			<p>
+				By the way, I follow Gary Vaynerchuk on social media sites and most importantly in life. I try to take his advice to heart and so that should explain the excessive use of curse words and just common sense writing mistakes.
+			</p>
+		</div>
+	</div>
+	
+	<div>
+		<h3 class="acc">Tough conversation I should've had with my parents in 2017</h3>
+		<div>
+			<p>
+				Hey. Whats going on?
+			</p>
+			<p>
+				It is 02:09 late in the night. My sleep cycle is completely fucked up but who cares when your executing the crap out
+				during the period when your awake.
+			</p>
+			<p>
+				So anyway, i was drawn into this really fascinating loud
+				conversation that Garyvee was having with this caller and some indian comedian. They were yelling about being a fan
+				of
+				houston rockets or cleveland cavaliers. Gary was literally slamming the phone and yelling deep down from his lungs.
+				Anyway, with that curiosity risen in me, i listened more intently and as i listened the conversation turned out to
+				contain much more wisdom than just plain heated debate over basketball. This guy is 28 and hes south asian and due
+				to
+				that, his parents literally own his life decisions like who to marry and what to do for a living. However, our guy
+				managed to leave the nest and get an apartment on his own but struggle to make the ends meet so he does this nine to
+				five kind of job which sucks the life out of him and then on the other side he is passionate about filmmaking and
+				shit
+				and so since hes out of thick cash support he has a side project on that filmmaking thing and does every job. He
+				casts,
+				edits, acts, writes, and sells and markets. My mans all about hustling and following Garys advices to heart but he
+				admits that he gets burned out. Anyway gary took the answer and just let himself loose. What he said was to go back
+				home
+				and start saving cash. Go and tell your parents go fuck themselves and see them in ten years.
+			</p>
+			<p>
+				Its just gain a
+				perspective and see long term instead of short term kinf of advice. I mean this one is really popular advice that i
+				know
+				by heart but the reason why i wanted to write it down was because it felt so relatable to me. Im sorry i might have
+				to
+				diss my parents here but yeah fuck them. The moment gary was spitting those truth,i kept thinking why in the fuck i
+				didnt take these advice personally when i watched similar video in 2018 when i had just graduated from high school
+				and
+				that i was firm on not studying in university. Goddamn, why the fuck did i even went to study in that shitty
+				mongolian
+				national university for a year. What a fucking waste of time and money. And im still fucking wasting my time and
+				money
+				here as well. Just fucking around. Literally wasting time and money here. Not consuming any knowledge, not even
+				being
+				able to understand anything being taught. Literally learning everything for free from the internet instead of from
+				the
+				teachers. And then letting these goddamn lessons suck the life out of me every single day and constantly helping
+				this
+				habit of letting my own subconscious believe deeply that im worthless piece of shit. Goodluck with that self esteem
+				shit. I mean. Im just trying to say that i shouldve the moment i watched similar video went up to my parents and had
+				that tough conversation upfront. However it is true that i gotta be smart about the approach as well since u will be
+				living under their houses roof and eating their food for next few years right.
+			</p>
+			<p>
+				So i shouldve just said mom dad i love
+				you and i know that u guys love me as well and that u wish only the best for me but i just dont want to study in
+				university. Ok so this conversation is going to be really tough one but hear me out. Im not saying that i dont wanna
+				go
+				to university because its boring and hard but rather because its pure waste of time and i will not be challenged
+				enough
+				and i know for fact that the chance of me getting led astray from what i truly need is enormous. I know what i want
+				to
+				do for a living. I found out how i can find that thing i will doing for the rest of my life. I am young and i want
+				to
+				take advantage of that by experiencing different fields of life. I understand that u want to me to be a doctor,
+				scientist, or any other office worker that works at this safe job where i work from nine to five in a pretty office
+				within my own cubicle around colleagues that are like me but i willbe dreading every second of that life. So i cant
+				even
+				imagine the amount of hatred and resentment i will have accumulated towards as each day of my mid thirties passes
+				towards u, because u have forced to choose that path instead of following my own passion where i am wondering every
+				single day depressed going to work never knowing whether if ever had at least a tiny bit of chance of success if i
+				had
+				just tried going on the path that i wanted to go on. So u see, let us assume that i am living a comforrable safe
+				life
+				where i know where is my next income coming from and i have a roof over my head and i can afford a one or two
+				luxuries a
+				month but i can assure u that i will be miserable as hell. Im 30 years old and have a family now so that changing
+				careers now is too damn risky so i am literally stuck in this dead end path of life. Now to whom do u think i will
+				point
+				fingers when i try to analyze how the fuck i have ended up in this shithole. None other than you. My dearest,
+				closest
+				people i have in my entire life. Mom and dad. U know how hard it is to hold a grudge against your close friend who
+				betrayed u right. U never ever want to see them again. But what about family. I mean, i dont even think i would be
+				even
+				able to look at your faces. I would be just too damn depressed all the time, overwhelmed by this work that i hate
+				doing
+				but have to since thats my only way out of ending up in streets. Every day, every night, i would be haunted by these
+				nightmarish thoughts of what ifs. What if i decided to follow my own path and succeeded and instead of these fucked
+				up
+				documents i have to prepare for this douchebag of a boss i have at work i might be actually all giddied up and fired
+				up
+				to go to work the next day doing what i love for a living. Alright, but then what if i failed and didnt succeed,
+				then
+				who cares im 22 and i dont have a family of my own and i can start fresh from something else. But its super hard to
+				find
+				no success from chasing something u love. When u truly love doing something. When u are actually addicted to the
+				process
+				of working, then your destined to find success as long as your patient. But what is that success, the thing that is
+				being defined as the end goal, something being valued more important than the day to day process. At the end of the
+				day
+				isnt life all about being happy and pleased with what u have. Whats the point of being the richest person of the
+				world
+				but u hate every second of being awake.
+			</p>
+			<p>
+				Anyway, i really wish i had this talk way before graduating with my parents. Then who knows what would i be doing
+				right
+				now. See. This fucking thing called regret is deadly. It fucking hurts more than anything in the world because u
+				cant
+				take back time. I am now even carrying slight dose of regret and it fucking stings. Its the most pain ive ever
+				experienced in my entire life and god knows how many times ive been sick and close to conscious numbing sickness.
+			</p>
+		</div>
+	</div>
+	<button id="lighter" onclick="theme()">lighter</button>
+</body>
 </html>
